split tmux panes with prefix j/l
Change-Id: I0683d42e806bddb082e86c384488f9102bc78053

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,9 +55,9 @@ set -g visual-activity off
 # navigation
 #------------
 
-# split panes using | and -
-bind | split-window -h
-bind - split-window -v
+# split panes using j and l
+bind l split-window -h
+bind j split-window -v
 unbind '"'
 unbind %
 
@@ -608,11 +608,11 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #
 #   tmux_conf_new_pane_reconnect_ssh=${tmux_conf_new_pane_reconnect_ssh:-false}
 #   if _is_enabled "$tmux_conf_new_pane_reconnect_ssh"; then
-#     tmux  bind -    run "cut -c3- ~/.tmux.conf | sh -s _split_window #{pane_tty} -v -c '#{pane_current_path}'" \;\
-#           bind \|   run "cut -c3- ~/.tmux.conf | sh -s _split_window #{pane_tty} -h -c '#{pane_current_path}'"
+#     tmux  bind j    run "cut -c3- ~/.tmux.conf | sh -s _split_window #{pane_tty} -v -c '#{pane_current_path}'" \;\
+#           bind l    run "cut -c3- ~/.tmux.conf | sh -s _split_window #{pane_tty} -h -c '#{pane_current_path}'"
 #   else
-#     tmux  bind -    split-window -v -c '#{pane_current_path}' \;\
-#           bind \|   split-window -h -c '#{pane_current_path}'
+#     tmux  bind j    split-window -v -c '#{pane_current_path}' \;\
+#           bind l    split-window -h -c '#{pane_current_path}'
 #   fi
 #
 #   tmux bind C-c command-prompt -p new-session 'new-session -s "%%"'
