tmux.conf for new version

--- a/tmux.conf
+++ b/tmux.conf
@@ -66,7 +66,6 @@ bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
 bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # alt-vim keys to resize panel without prefix
 bind -n M-h resize-pane -L 10
@@ -685,7 +684,7 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 #   if [ x"$(tmux show -g -v status-justify)" = x"right" ]; then
 #     tmux_conf_theme_window_status_current_format="#[fg=$light_blue,bg=$dark_gray]$tmux_conf_theme_right_separator_main#[fg=default,bg=default,default] $tmux_conf_theme_window_status_current_format #[fg=$dark_gray,bg=$light_blue,none]$tmux_conf_theme_right_separator_main"
 #   else
-#     tmux_conf_theme_window_status_current_format="#[fg=$dark_gray,bg=$light_blue]$tmux_conf_theme_left_separator_main#[fg=default,bg=default,default] $tmux_conf_theme_window_status_current_format #[fg=$light_blue,bg=$dark_gray,none]$tmux_conf_theme_left_separator_main"
+#     tmux_conf_theme_window_status_current_format="#[fg=$dark_gray,bg=$light_blue]$tmux_conf_theme_left_separator_main#[fg=default,bg=default,$light_blue] $tmux_conf_theme_window_status_current_format #[fg=$light_blue,bg=$dark_gray,none]$tmux_conf_theme_left_separator_main"
 #   fi
 #
 #   # window status style
